--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.6",
+    "add": "^2.0.6",
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
+    "next": "14.2.15",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "supabase": "^1.207.9"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "eslint-config-next": "14.2.15",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5"
   }
 }
