--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "@supabase/supabase-js": "^2.45.6",
     "add": "^2.0.6",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.474.0",
     "next": "14.2.15",
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-dom": "^18",
-    "supabase": "^1.207.9"
+    "supabase": "^1.207.9",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
